--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,4 +29,24 @@
     <servlet-name>HomePage</servlet-name>
     <url-pattern>/HomePage</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SessionCount</display-name>
+    <servlet-name>SessionCount</servlet-name>
+    <servlet-class>SessionCount</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SessionCount</servlet-name>
+    <url-pattern>/SessionCount</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>LogOut</display-name>
+    <servlet-name>LogOut</servlet-name>
+    <servlet-class>LogOut</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LogOut</servlet-name>
+    <url-pattern>/LogOut</url-pattern>
+  </servlet-mapping>
 </web-app>
