--- a/build.xml
+++ b/build.xml
@@ -3,10 +3,10 @@
 	<property name="src.dir" location="src" />
 	<property name="build.dir" location="build" />
 	<property name="classes.dir" location="${build.dir}/classes" />
-	<property name="webContent.dir" location="WebContent" />
+	<property name="web.dir" location="WebContent" />
 	<property name="lib.dir" location="WebContent/WEB-INF/lib" />
 	<property name="ivy.retrieve.pattern" value="${dir.lib}/[artifact]­[type]­[revision].[ext]" />
-	<property name="war.file" location="${build.dir}/jyri363.war" />
+	<property name="war.file" location="jyri363.war" />
 	
 	<path id="classpath">
 		<fileset dir="lib">
@@ -18,9 +18,9 @@
 	</path>
 	
 	<target name="war" depends="compile">
-		<war destfile="${war.file}" webxml="${webContent.dir}/WEB-INF/web.xml">
+		<war destfile="${war.file}" webxml="${web.dir}/WEB-INF/web.xml">
 			<classes dir="${classes.dir}" />
-			<fileset dir="${webContent.dir}" excludes="**/servlet-api.jar" />
+			<fileset dir="${web.dir}" excludes="**/servlet-api" />
 		</war>
 	</target>
 	
