--- a/build.xml
+++ b/build.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" ?>
-<project name="jyri363" xmlns:ivy="antlib:org.apache.ivy.ant">
-	<property name="src.dir" location="src" />
-	<property name="build.dir" location="build" />
+<project name="jyri363" xmlns:ivy="antlib:org.apache.ivy.ant" basedir="." default="compile">
+	<property name="basedir" location="." />
+	<property name="src.dir" location="${basedir}/src" />
+	<property name="build.dir" location="${basedir}/build" />
 	<property name="classes.dir" location="${build.dir}/classes" />
-	<property name="web.dir" location="WebContent" />
-	<property name="lib.dir" location="WebContent/WEB-INF/lib" />
-	<property name="ivy.retrieve.pattern" value="${dir.lib}/[artifact]­[type]­[revision].[ext]" />
+	<property name="web.dir" location="${basedir}/WebContent" />
+	<property name="lib.dir" location="${web.dir}/WEB-INF/lib" />
+	<property name="ivy.retrieve.pattern" value="${lib.dir}/[artifact]-[type]-[revision].[ext]" />
+	<property name="ivylib.dir" location="${basedir}/lib" />
 	<property name="war.file" location="jyri363.war" />
-	
+
 	<path id="classpath">
-		<fileset dir="lib">
+		<fileset dir="${ivylib.dir}">
 			<include name="*.jar" />
 		</fileset>
 		<fileset dir="${lib.dir}">
 			<include name="*.jar" />
 		</fileset>
-	</path>
+	</path>	
 	
-	<target name="war" depends="compile">
-		<war destfile="${war.file}" webxml="${web.dir}/WEB-INF/web.xml">
-			<classes dir="${classes.dir}" />
-			<fileset dir="${web.dir}" excludes="**/servlet-api.jar" />
-		</war>
+	<target name="init">
+		<mkdir dir="${classes.dir}" />
+		<mkdir dir="${lib.dir}" />
+	</target>
+		
+	<target name="compile" depends="clean, init, retrieve">
+		<javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.6" target="1.6" includeantruntime="false">
+			<classpath refid="classpath" />
+		</javac>
 	</target>
 	
 	<target name="retrieve" description="retreive dependencies">
@@ -29,16 +35,12 @@
 		<ivy:resolve file="${basedir}/ivy.xml" log="downloadonly" />
 		<ivy:retrieve pattern="${ivy.retrieve.pattern}" conf="default" />
 	</target>
-	
-	<target name="init">
-		<mkdir dir="${classes.dir}" />
-		<mkdir dir="${lib.dir}" />
-	</target>
-	
-	<target name="compile" depends="clean, init, retrieve">
-		<javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.6" target="1.6" includeantruntime="false">
-			<classpath refid="classpath" />
-		</javac>
+
+	<target name="war" depends="compile">
+		<war destfile="${war.file}" webxml="${web.dir}/WEB-INF/web.xml">
+			<classes dir="${classes.dir}" />
+			<fileset dir="${web.dir}" excludes="**/servlet-api.jar" />
+		</war>
 	</target>
 	
 	<target name="clean">
