--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,6 +12,7 @@
   <listener>
     <listener-class>SessionCounterListener</listener-class>
   </listener>
+
   <listener>
     <listener-class>listener.InitDatabaseListener</listener-class>
   </listener>
@@ -84,5 +85,15 @@
   <servlet-mapping>
     <servlet-name>Delete</servlet-name>
     <url-pattern>/Delete</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Admin</display-name>
+    <servlet-name>Admin</servlet-name>
+    <servlet-class>servlet.Admin</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Admin</servlet-name>
+    <url-pattern>/Admin</url-pattern>
   </servlet-mapping>
 </web-app>
