--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
 	<property name="lib.dir" location="${web.dir}/WEB-INF/lib" />
 	<property name="ivy.retrieve.pattern" value="${lib.dir}/[artifact]-[type]-[revision].[ext]" />
 	<property name="ivylib.dir" location="${basedir}/lib" />
-	<property name="war.file" value="jyri363.war" />
+	<property name="war.file" location="jyri363.war" />
 
 	<path id="classpath">
 		<fileset dir="${ivylib.dir}">
@@ -30,12 +30,17 @@
 		</javac>
 	</target>
 	
+	<target name="clean">
+		<delete dir="${build.dir}" />
+	</target>
+	
 	<target name="retrieve" description="retreive dependencies">
 		<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="classpath" />
 		<ivy:resolve file="${basedir}/ivy.xml" log="downloadonly" />
 		<ivy:retrieve pattern="${ivy.retrieve.pattern}" conf="default" />
 	</target>
-
+	
+	
 	<target name="war" depends="compile">
 		<war destfile="${war.file}" webxml="${web.dir}/WEB-INF/web.xml">
 			<classes dir="${classes.dir}" />
@@ -44,8 +49,6 @@
 		</war>
 	</target>
 	
-	<target name="clean">
-		<delete dir="${build.dir}" />
-	</target>
+	
 
 </project>
