--- a/ivy.xml
+++ b/ivy.xml
@@ -9,7 +9,7 @@
 	    <dependency org="commons-collections" name="commons-collections" rev="20040616"/>
 	    <dependency org="commons-dbutils" name="commons-dbutils" rev="1.5"/>
 	    <dependency org="org.hsqldb" name="hsqldb" rev="2.3.0"/>
-	
+		<dependency org="org.hibernate" name="hibernate-entitymanager" rev="4.2.6.Final"/>
 	    <dependency org="org.apache.ant" name="ant" rev="1.9.2"/>
 	
 	    <dependency org="jstl" name="jstl" rev="1.2"/>
