--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
 	<property name="lib.dir" location="${web.dir}/WEB-INF/lib" />
 	<property name="ivy.retrieve.pattern" value="${lib.dir}/[artifact]-[type]-[revision].[ext]" />
 	<property name="ivylib.dir" location="${basedir}/lib" />
+	<property file="application.properties" location="${basedir}/src" />
 	<property name="war.file" value="jyri363.war" />
 
 	<path id="classpath">
@@ -25,7 +26,7 @@
 	</target>
 		
 	<target name="compile" depends="clean, init, retrieve">
-		<javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.6" target="1.6" includeantruntime="false">
+		<javac srcdir="${src.dir}" destdir="${classes.dir}" source="1.7" target="1.7" includeantruntime="false">
 			<classpath refid="classpath" />
 		</javac>
 	</target>
