--- a/src/application.properties
+++ b/src/application.properties
@@ -1,1 +1,1 @@
-javax.persistence.jdbc.url=jdbc:hsqldb:file:${user.home}/data/jyri363/dbtest;shutdown=true
+ javax.persistence.jdbc.url=jdbc:hsqldb:mem:jyri363;shutdown=false
